[tool.poetry]
name = "hithon_data_utils"
version = "0.1.0"
description = "A collection of utilities for manipulating and extracting information from data collected by RustyBuilds"
authors = ["Jack Stillwell <jack.stillwell@outlook.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
